add missing image, fix spe file and legal issues
git-svn-id: file:///srv/svn/publican/trunk@115 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-fedora/Makefile
+++ b/publican-fedora/Makefile
@@ -2,7 +2,7 @@ BRAND	= fedora
 SPEC	= publican-$(BRAND).spec
 NAME	= publican-$(BRAND)
 VERSION = $(shell grep 'Version:' $(SPEC) | sed -e 's/Version:\s*\(.*\)$$/\1/g')
-RELEASE = $(shell grep 'define\s*real_release' $(SPEC) | sed -e 's/^.*real_release\s*\(.*\)$$/\1/g')
+RELEASE = $(shell grep 'Release:' $(SPEC) | sed -e 's/Release:\s*\(.*\)$$/\1/g' | sed -e 's/...dist.//')
 PWD	= $(shell pwd)
 RPMDIR	=  $(PWD)/tmp/rpm
 OS_VER = $(shell uname -a | sed -e 's/^.*\.\(...\)[^\.]*\#.*$$/\1/')
