Fix PDF list whit space issue BZ #429237 Die with a decent warning when an invalid Brand is chosen. BZ #429236 Modified title page of PDF. BZ #429977
git-svn-id: file:///srv/svn/publican/trunk@120 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -86,6 +86,11 @@ pre::
 		echo "ERROR: RELEASE can only contain 0-9 and '.'! '$(RELEASE)' is not valid, please edit <productnumber> in your $(DOC_TYPE)_Info.xml file"; \
 		exit 1; \
 	fi
+	@if [ ! -d $(COMMON_CONTENT)/$(BRAND) ]; then \
+		echo; \
+		echo "ERROR: Brand $(BRAND) is not installed. Either install $(BRAND) or change to a valid Brand."; \
+		exit 1; \
+	fi
 
 
 ###############################################################################
