more fop tweaks
git-svn-id: file:///srv/svn/publican/trunk@132 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/make/Makefile.templates
+++ b/publican/make/Makefile.templates
@@ -166,7 +166,7 @@ ifeq "${1}" "txt"
 	@cd tmp/${2} && /usr/bin/links -dump -dump-width 72 -force-html -dump-charset UTF8 -no-numbering html-single/index.html > txt/$(DOCNAME).txt
 else
 ifeq "${1}" "pdf"
-	cd tmp/${2}/xml; \
+	@cd tmp/${2}/xml; \
 		if [ -f $(COMMON_CONFIG)/xsl/$(BRAND)/${3} ]; then \
 			xsl_file="$(COMMON_CONFIG)/xsl/$(BRAND)/${3}"; \
 		else \
@@ -175,7 +175,7 @@ ifeq "${1}" "pdf"
 		if [ "$(FOP_VER)" = "0.20.5" ]; then \
 			$(CATALOGS) xsltproc --stringparam toc.section.depth "$(TOC_SECTION_DEPTH)" --stringparam chunk.section.depth "$(CHUNK_SECTION_DEPTH)" --stringparam confidential ${CONFIDENTIAL} --stringparam l10n.gentext.language "${2}" --stringparam show.comments $(SHOW_REMARKS) --xinclude -o $(DOCNAME).fo $$$$xsl_file $(DOCNAME).xml; \
 		else \
-			$(CATALOGS) xsltproc --stringparam toc.section.depth "$(TOC_SECTION_DEPTH)" --stringparam chunk.section.depth "$(CHUNK_SECTION_DEPTH)" --stringparam confidential ${CONFIDENTIAL} --stringparam l10n.gentext.language "${2}" --stringparam show.comments $(SHOW_REMARKS) --stringparam fop.extensions "0" --stringparam fop1.extensions "1" --xinclude -o $(DOCNAME).fo $$$$xsl_file $(DOCNAME).xml ;\
+			$(CATALOGS) xsltproc --stringparam toc.section.depth "$(TOC_SECTION_DEPTH)" --stringparam chunk.section.depth "$(CHUNK_SECTION_DEPTH)" --stringparam confidential ${CONFIDENTIAL} --stringparam l10n.gentext.language "${2}" --stringparam show.comments $(SHOW_REMARKS) --stringparam fop.extensions "0" --stringparam fop1.extensions "1" --stringparam admon.graphics.extension ".png" --xinclude -o $(DOCNAME).fo $$$$xsl_file $(DOCNAME).xml ;\
 		fi
 	@cd tmp/${2}/xml; \
 		if [ ! -f $(COMMON_CONFIG)/fop/fop-$(FOP_VER).xconf ]; then \
