--- a/publican-redhat/make/Makefile.RedHat
+++ b/publican-redhat/make/Makefile.RedHat
@@ -2,6 +2,8 @@
 CATALOGS	= XML_CATALOG_FILES="$(COMMON_CONFIG)/xsl/docbook/dtd-4.5/catalog.xml $(COMMON_CONFIG)/xsl/docbook/1.72.0/catalog.xml"
 #XML_DEBUG_CATALOG=1
 
+DOC_URL		= http://www.redhat.com/doc
+
 # hack, RHEL SHIPPED products where in RHEL5 before this multi-product layout was in place
 # So we have to use a different naming scheme for the 4 shipped books
 ifeq "$(PRODUCT)" "Red_Hat_Enterprise_Linux"
