--- a/publican/Makefile
+++ b/publican/Makefile
@@ -19,7 +19,7 @@
 NAME	= publican
 SPEC	= $(NAME).spec
 VERSION = $(shell grep 'Version:' $(SPEC) | sed -e 's/Version:\s*\(.*\)$$/\1/g')
-RELEASE = $(shell grep 'define\s*real_release' $(SPEC) | sed -e 's/^.*real_release\s*\(.*\)$$/\1/g')
+RELEASE = $(shell grep 'Release:' $(SPEC) | sed -e 's/Release:\s*\(.*\)$$/\1/g' | sed -e 's/...dist.//')
 PWD	= $(shell pwd)
 RPMDIR	=  $(PWD)/tmp/rpm
 OS_VER	= $(shell uname -a | sed -e 's/^.*\.\(...\)[^\.]*\#.*$$/\1/')
@@ -37,7 +37,8 @@ local: rpm
 
 rpm: srpm
 	@echo "Start $@"
-	@rpmbuild --define "dist .$(OS_VER)" --define "_topdir $(RPMDIR)" -bb $(RPMDIR)/SPECS/$(NAME).spec
+	@rpmbuild --define "dist .$(OS_VER)" --define "_topdir $(RPMDIR)" --rebuild $(RPMDIR)/SRPMS/$(TAR_NAME)-$(RELEASE).$(OS_VER).src.rpm
+#-bb $(RPMDIR)/SPECS/$(NAME).spec
 	@echo "End $@"
 
 srpm: dist
@@ -45,9 +46,9 @@ srpm: dist
 	@mkdir -p $(RPMDIR)
 	@cd $(RPMDIR) && mkdir -p  SPECS  SRPMS BUILD SOURCES RPMS/noarch
 	@cp $(TAR_NAME).tgz $(RPMDIR)/SOURCES/.
-	@cp $(NAME).spec $(RPMDIR)/SPECS/.
-	@rpmbuild --define "dist .el4" --define "_topdir $(RPMDIR)" -bs $(RPMDIR)/SPECS/$(NAME).spec
-	@rpmbuild --define "dist .el5" --define "_topdir $(RPMDIR)" -bs $(RPMDIR)/SPECS/$(NAME).spec
+	@cp *.spec $(RPMDIR)/SPECS/.
+	@rpmbuild --define "dist .el4" --define "_topdir $(RPMDIR)" -bs $(RPMDIR)/SPECS/$(NAME).el5.spec
+	@rpmbuild --define "dist .el5" --define "_topdir $(RPMDIR)" -bs $(RPMDIR)/SPECS/$(NAME).el5.spec
 	@rpmbuild --define "dist .fc9" --define "_topdir $(RPMDIR)" -bs $(RPMDIR)/SPECS/$(NAME).spec
 	@echo "End $@"
 
@@ -68,6 +69,13 @@ MYPATH = $(shell echo $$PATH)
 docs: PATH=$(MYPATH):$(PWD)/bin
 docs: Common_Content
 	@echo "Start $@"
+	@echo '<?xml version="1.0" encoding="utf-8"?>' > xslcat;
+	@echo '<catalog xmlns="urn:oasis:names:tc:entity:xmlns:xml:catalog">' >> xslcat;
+	@echo '   <rewriteURI uriStartString="http://docbook.sourceforge.net/release/xsl/current/" rewritePrefix="/usr/share/sgml/docbook/xsl-stylesheets/"/>' >> xslcat;
+	@echo '   <rewriteSystem systemIdStartString="http://docbook.sourceforge.net/release/xsl/current/" rewritePrefix="/usr/share/sgml/docbook/xsl-stylesheets/"/>' >> xslcat;
+	@echo '   <rewriteURI uriStartString="http://docbook.sourceforge.net/release/xsl/1.72.0/" rewritePrefix="/usr/share/sgml/docbook/xsl-stylesheets/"/>' >> xslcat;
+	@echo '   <rewriteSystem systemIdStartString="http://docbook.sourceforge.net/release/xsl/1.72.0/" rewritePrefix="/usr/share/sgml/docbook/xsl-stylesheets/"/>' >> xslcat;
+	@echo '</catalog>' >> xslcat;
 	@make -C content/docs STANDALONE=1 publish-dist
 	@mv content/docs/publish docs
 	@echo "End $@"
@@ -150,11 +158,11 @@ Common_Content:: entities
 				else \
 					echo "		Processing ../$$lang/$$po_file"; \
 					po2xml $$xml_file ../$$lang/$$po_file > tmp.xml; \
-					$(XMLCLEAN) --common -in tmp.xml -out $(PWD)/Common_Content/common/$$lang/$$xml_file -lang $$lang; \
+					$(XMLCLEAN) -dtd "4.3" --common -in tmp.xml -out $(PWD)/Common_Content/common/$$lang/$$xml_file -lang $$lang; \
 					rm tmp.xml; \
 				fi; \
 			done; \
-			$(XMLCLEAN) --common -in $$xml_file -out $(PWD)/Common_Content/common/en-US/$$xml_file -lang en-US; \
+			$(XMLCLEAN) -dtd "4.3" --common -in $$xml_file -out $(PWD)/Common_Content/common/en-US/$$xml_file -lang en-US; \
 		done; \
 		cd ..; \
 		for lang in $(LANGS) en-US; do \
