--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -29,7 +29,7 @@ CONFIDENTIAL	?= 0
 BREW_DIST	?= dist-5E-qu-candidate
 TRANSLATIONS	?= $(XML_LANG) $(OTHER_LANGS)
 EXTRA_DIRS	?= $(shell find $(XML_LANG) -type d | grep -v CVS | grep -v '.svn' | grep -v images | sed -e 's/$(XML_LANG)//g'| sed -e 's/^\///g')
-XMLCLEAN	= xmlClean
+XMLCLEAN	?= xmlClean
 PRODUCT		?= Documentation
 
 ###############################################################################
