handle building rhel4 packages in xen client
git-svn-id: file:///srv/svn/publican/trunk@143 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/Makefile
+++ b/publican-redhat/Makefile
@@ -7,7 +7,9 @@ RELEASE = $(shell grep 'Release:' $(SPEC) | sed -e 's/Release:\s*\(.*\)$$/\1/g' 
 PWD	= $(shell pwd)
 RPMDIR	=  $(PWD)/tmp/rpm
 OS_VER	= $(shell uname -a | sed -e 's/^.*\.\(...\)[^\.]*\#.*$$/\1/')
-
+ifeq "$(OS_VER)" "ELx"
+OS_VER	= "el4"
+endif
 TAR_NAME = $(NAME)-$(VERSION)
 LANGS = as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN it-IT ja-JP kn-IN ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW
 
