modify web rpms
git-svn-id: file:///srv/svn/publican/trunk@171 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -473,6 +473,14 @@ $(foreach FORMAT,$(TAR_FORMATS),$(eval $(call SRPM_Template,${FORMAT})))
 
 srpm-all:: $(foreach FORMAT,$(TAR_FORMATS),srpm-${FORMAT})
 
+###############################################################################
+# Web SRPMs
+###############################################################################
+
+$(foreach L,$(TRANSLATIONS),$(eval $(call Trans_Info_Template,${L})))
+$(foreach L,$(TRANSLATIONS),$(eval $(call WEB_SRPM_Template,${L})))
+$(foreach L,$(TRANSLATIONS),$(eval $(call Publish-WEB_Template,${L})))
+
 
 ###############################################################################
 ###############################################################################
