use older xsl files for desktop entries
git-svn-id: file:///srv/svn/publican/trunk@174 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-redhat/make/Makefile.RedHat
+++ b/publican-redhat/make/Makefile.RedHat
@@ -15,23 +15,23 @@ ifeq "$(DOCNAME)" "Deployment_Guide"
 SPEC_NAME		= $(DOCNAME)
 # TODO: verify the new style sheets don't break the shipped books
 # the old ones are still there just in case
-#SPEC_XSL		= $(COMMON_CONFIG)/xsl/spec2.xsl
-#SUB_SPEC_XSL	= $(COMMON_CONFIG)/xsl/sub_package2.xsl
+SPEC_XSL		= $(COMMON_CONFIG)/xsl/spec2.xsl
+SUB_SPEC_XSL	= $(COMMON_CONFIG)/xsl/sub_package2.xsl
 endif
 ifeq "$(DOCNAME)" "Virtualization"
 SPEC_NAME		= $(DOCNAME)
-#SPEC_XSL		= $(COMMON_CONFIG)/xsl/spec2.xsl
-#SUB_SPEC_XSL	= $(COMMON_CONFIG)/xsl/sub_package2.xsl
+SPEC_XSL		= $(COMMON_CONFIG)/xsl/spec2.xsl
+SUB_SPEC_XSL	= $(COMMON_CONFIG)/xsl/sub_package2.xsl
 endif
 ifeq "$(DOCNAME)" "Global_File_System"
 SPEC_NAME		= $(DOCNAME)
-#SPEC_XSL		= $(COMMON_CONFIG)/xsl/spec2.xsl
-#SUB_SPEC_XSL	= $(COMMON_CONFIG)/xsl/sub_package2.xsl
+SPEC_XSL		= $(COMMON_CONFIG)/xsl/spec2.xsl
+SUB_SPEC_XSL	= $(COMMON_CONFIG)/xsl/sub_package2.xsl
 endif
 ifeq "$(DOCNAME)" "Cluster_Administration"
 SPEC_NAME		= $(DOCNAME)
-#SPEC_XSL		= $(COMMON_CONFIG)/xsl/spec2.xsl
-#SUB_SPEC_XSL	= $(COMMON_CONFIG)/xsl/sub_package2.xsl
+SPEC_XSL		= $(COMMON_CONFIG)/xsl/spec2.xsl
+SUB_SPEC_XSL	= $(COMMON_CONFIG)/xsl/sub_package2.xsl
 endif
 endif
 
