--- a/publican/make/Makefile.templates
+++ b/publican/make/Makefile.templates
@@ -29,7 +29,7 @@ CHUNK_FIRST		?= 1
 SHOW_REMARKS	?= 0
 EMBEDTOC	?= 0
 BRAND		?= common
-DOC_URL		?= http://www.redhat.com/doc
+DOC_URL		?= https://fedorahosted.org/publican
 
 #CATALOGS_OVERRIDE
 
