remove debug msg
git-svn-id: file:///srv/svn/publican/trunk@194 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/make/Makefile.common
+++ b/publican/make/Makefile.common
@@ -403,7 +403,7 @@ spec: html-single-all tar_dir
 else
 spec: xml-all tar_dir
 endif
-	@echo "START: spec `date`: $(SPEC_XSL)"
+	@echo "START: spec `date`"
 	@rm -f tmp/subpackages.txt tmp/titles.txt tmp/changelog.txt
 	@for lang in $(TRANSLATIONS); do \
 		$(CATALOGS) $(XSLTPROC) --stringparam book-lang $$lang $(COMMON_CONFIG)/xsl/subtitle.xsl tmp/$$lang/xml/$(DOC_TYPE)_Info.xml >> tmp/titles.txt; \
